# simple-snmp-template-for-testing-v4

./: .gitignore  AGENTS.md  AI_POLICY.md  GRADING.md  LICENSE  PROCESS_TRACKING.md  README.md  TESTING.md  VSCODE_GUIDE.md  conftest.py  github_grader.py  project-template-config.json  pyproject.toml  requirements.txt  run_tests.py
.ai-traces/: external-attestation.txt  interaction-stream.jsonl
.codex/: config.toml
.githooks/: post-commit
docs/: agent.md  background.md  debugging.md  index.md  manager.md  protocol.md
instructor-tools/: BACKPORT.md
src/: .gitkeep  mib_database.py  snmp_agent.py  snmp_manager.py  snmp_protocol.py
tests/: __init__.py  conftest.py  snmp_fixtures.py  test_agent_adapter_codex.py  test_agent_adapters_base.py  test_agent_adapters_protocol.py  test_agent_adapters_registry.py  test_ai_trace_e2e.py  test_ai_traces_codex_normalize.py  test_attribution_cli.py  test_capture_audit.py  test_capture_auth.py  test_capture_git_ops.py  test_capture_integration.py  test_capture_metadata.py  test_capture_migration.py  test_capture_snapshot_now.py  test_capture_state.py  test_capture_watchdog.py  test_codex_hooks.py  test_codex_ingest.py  test_codex_run_launcher.py  test_entry_point_venv_check.py  test_force_paths_unstage_after.py  test_orchestrator.py  test_orchestrator_artifact_hashes.py  test_orchestrator_cli.py  test_orchestrator_lock.py  test_post_commit_entry.py  test_preflight.py  test_private_snmp.py  test_public_agent_manager_integration.py  test_public_agent_server.py  test_public_manager_client.py  test_public_snmp_protocol.py  (+6 more)
(+51 files in other folders)
