[project]
name = "simple-snmp"
version = "0.1.0"
description = "Simplified SNMP protocol implementation (CPSC 3600)"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    # thread method is cross-platform; signal method fails on Windows.
    # Thread can't interrupt C-level blocks; the watchdog covers that.
    # Calibrated 2026-04-22: slowest reference-solution test is ~0.5s; 15s
    # gives ~30x headroom for slower student machines, CI runners, and
    # debuggers. Override per-test with @pytest.mark.timeout(N) if needed.
    "--timeout=15",
    "--timeout-method=thread",
]
markers = [
    "bundle: mark test as belonging to a specific grading bundle (usage: @pytest.mark.bundle(1))",
    "points: mark test with point value for scoring (usage: @pytest.mark.points(10))",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]